--- a/Contactme.html
+++ b/Contactme.html
@@ -11,5 +11,17 @@
     <p>Address dasdasdas adsdsa</p>
     <p> phone number 6949378545</p>
     <p>Email@gmail.com</p>
+
+    <form action="mailto:t.vasilis94@outlook.com" method="post" enctype="text/plain">
+        
+        <label>YourName: </label>
+        <input type="text" name="value" id=""><br>
+        <label>YourEmail: </label>
+        <input type="email" name="value" id=""><br>
+        <label for="Your Message"></label>
+        <textarea name="name" cols="30" rows="10"></textarea>
+        <input type="submit" name="">
+    
+    </form>
 </body>
 </html>
