--- a/Contactme.html
+++ b/Contactme.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/stylecontact.css">
     <title>Contact me</title>
 </head>
 <body>
-    <h2>Contact me details</h2>
-    <p>Address dasdasdas adsdsa</p>
-    <p> phone number 6949378545</p>
-    <p>Email@gmail.com</p>
+    <h2>Info</h2>
+    <p>Address 97a</p>
+    <p> Phone Number 6949111111</p>
+    <p>Pogchamp@outlook.com</p>
 
     <form action="mailto:t.vasilis94@outlook.com" method="post" enctype="text/plain">
         
