--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="Contact me" href="Contactme.html">
   <link rel="stylesheet" href="CSS/style.css">
+
   <!-- start of favicon-->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_package_v0.16/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_package_v0.16/favicon-32x32.png">
@@ -56,10 +57,16 @@
       <h1>What I can do.</h1>
       <h3 class="whaticandop">I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</h3>
     </div>
-      
+
   </div>
 
   <div class="section3">
+
+    <div class="box-2">
+      <div class="btn btn-two">
+        <span><a href="Contactme.html">Contact me</a></span>
+      </div>
+    </div>
 
   </div>
   
